# AiKiCad

./: AI-AGENT-FOR-KICAD-REVIEW.md  AI-AGENT-FOR-KICAD.md  README.md  monitor_progress.sh
common/: bitmap_store.cpp  kiway.cpp  systemdirsappend.cpp
common/git/: git_init_handler.cpp
eeschema/: CMakeLists.txt  menubar.cpp  sch_design_block_utils.cpp  sch_edit_frame.cpp  sch_edit_frame.h
eeschema/dialogs/: panel_eeschema_color_settings.cpp
eeschema/tools/: sch_actions.cpp  sch_actions.h  sch_editor_control.cpp  sch_editor_control.h  sch_selection_tool.cpp
kicad/: CMakeLists.txt
libs/kimath/: BEZIER_CURVE_DOCUMENTATION.md
pcbnew/: CMakeLists.txt  pcb_design_block_utils.cpp  pcb_edit_frame.cpp
pcbnew/dialogs/: panel_pcbnew_color_settings.cpp
pcbnew/netlist_reader/: pcb_netlist.cpp
pcbnew/tools/: pcb_selection_tool.cpp
plugins/: CMakeLists.txt
plugins/ai_chat/: BUILD_AND_TEST.md  BUILD_COMMANDS.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  CMakeLists.txt  COVERAGE_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  QUICK_FIX.md  README.md  TESTING.md  TEST_RESULTS.md  USAGE.md  VERIFICATION.md  active_monitor.sh  ai_chat_integration.cpp  ai_chat_integration.h  ai_chat_plugin.cpp  ai_chat_plugin.h  ai_command_processor.cpp  ai_command_processor.h  ai_service.cpp  ai_service.h  build_and_test.sh  check_build_status.sh  clean_build.sh  continuous_build.sh  dialog_ai_chat_settings.cpp  dialog_ai_chat_settings.h  fix_build.sh  fix_include_path.sh  force_rebuild.sh  keep_building.sh  monitor_and_fix.sh  orchestrate_fix.sh  panel_ai_chat.cpp  panel_ai_chat.h  run_tests.sh
qa/pcbnew_utils/: CMakeLists.txt  ai_chat_plugin_stub.cpp
qa/tests/: CMakeLists.txt
qa/tests/api/: CMakeLists.txt
qa/tests/eeschema/: CMakeLists.txt  test_module.cpp
qa/tests/pcbnew/: CMakeLists.txt
qa/tests/plugins/: CMakeLists.txt  test_ai_chat_plugin.cpp
qa/tests/spice/: CMakeLists.txt
qa/tools/pcbnew_tools/: CMakeLists.txt
